--- a/public/about/index.html
+++ b/public/about/index.html
@@ -20,7 +20,7 @@
     <link rel="alternative" href="/atom.xml" title="wyq&#39;s blog" type="application/atom+xml">
   
   
-    <link rel="icon" href="/favicon.png">
+    <link rel="icon" href="/img/avatar.jpg">
   
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
